--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -48,10 +48,10 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.8
-_minor=7
+_minor=8
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.8.7.lqx1.r0.gb12ebc61a765
+pkgver=5.8.8.lqx1.r0.g0d1309374da5
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
