--- a/linux-lqx-rebranded/linux-lqx-tag/config
+++ b/linux-lqx-rebranded/linux-lqx-tag/config
@@ -402,11 +402,11 @@ CONFIG_SCHED_MC=y
 CONFIG_SCHED_MC_PRIO=y
 # CONFIG_RQ_NONE is not set
 # CONFIG_RQ_SMT is not set
-# CONFIG_RQ_MC is not set
-CONFIG_RQ_MC_LLC=y
+CONFIG_RQ_MC=y
+# CONFIG_RQ_MC_LLC is not set
 # CONFIG_RQ_SMP is not set
 # CONFIG_RQ_ALL is not set
-CONFIG_SHARERQ=3
+CONFIG_SHARERQ=2
 CONFIG_X86_LOCAL_APIC=y
 CONFIG_X86_IO_APIC=y
 CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS=y
@@ -8157,6 +8157,8 @@ CONFIG_VIDEO_USBVISION=m
 #
 # Android
 #
+CONFIG_ASHMEM=y
+# CONFIG_ION is not set
 # end of Android
 
 CONFIG_LTE_GDM724X=m
@@ -9139,7 +9141,11 @@ CONFIG_USB4=m
 #
 # Android
 #
-# CONFIG_ANDROID is not set
+CONFIG_ANDROID=y
+CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDERFS=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+CONFIG_ANDROID_BINDER_IPC_SELFTEST=y
 # end of Android
 
 CONFIG_LIBNVDIMM=y
