--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -49,9 +49,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.8
 _minor=9
-_lqx=lqx2
+_lqx=lqx3
 _srcname=zen-kernel
-pkgver=5.8.9.lqx2.r0.g5d7acfcd7c59
+pkgver=5.8.9.lqx3.r0.gf806c857cb6e
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
