--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -48,10 +48,10 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.8
-_minor=9
-_lqx=lqx3
+_minor=10
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.8.9.lqx3.r0.gf806c857cb6e
+pkgver=5.8.10.lqx1.r0.g2b72ad5f6bc0
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
