--- a/linux-5.9rc/linux-bfq-dev-git/PKGBUILD
+++ b/linux-5.9rc/linux-bfq-dev-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-bfq-dev-git
 _major=5.9
 _major_rc=5.9-rc
 _srcname=linux
-pkgver=5.9.rc4.r128.g729e3d091984
+pkgver=5.9.rc6.r11.g98477740630f
 pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
@@ -67,8 +67,8 @@ _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major_rc}
 _bfq_rev_path="bfq-reverts-v3-all"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
-_bfq_ver="v12"
-_bfq_rel="r2K200909"
+_bfq_ver="v13"
+_bfq_rel="r2K200922"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="cpu-patches-sep"
 _gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
@@ -338,7 +338,7 @@ done
 
 sha512sums=('SKIP'
             '9d3f270a5f3fd3221cf77715b85f09d57c3cfda2332f92754d8f4a3e1580dd4d2ab70cadcb9ff0c4491edb025bbb48f9f3cc27b1b765dd367ae9fdd31a10a0c4'
-            '6c46d201521082b3f6d41efc5414b1fe6b3148f35e50f4ef2b75be55cea746f7d5b205b5ab79f800cf2cfd5ecd615b7fe97dcdc9da2fcc13a585de4db7fa6cca'
+            '1cbdf377f0d6a1fb2bdbb4d5985f21b0e0fece3e41bc09b7ac8960dee4a06786c1ca546aeca3e57a3cbb6988108f9f965d24fac88610c50ac633845b61cb6ca9'
             '0c24d75a1350d1e974df342d77cb98bdc9c84a9af03788ff95e152c95d292b72ca870bb1e3b963a8f3a3387471e13e038b4bd1dc8b4063851a40e43e55c075c4'
             '6be8788bfa09f67273682cba1c4566cd1dc48b162c193a482d6565148779c80b6fb2fbe73d2d417dd9e53ca7a69d4ac2012fc98a48a8a0fcd5ac05161e7539c5'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
