--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -56,14 +56,14 @@ _major=5.8
 _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-git
-pkgver=5.8.6.1.r1708.g7e2fc1e
-pkgrel=4
+pkgver=5.8.11.1.r1735.geb43449
+pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="http://liquorix.net/"
 license=('GPL2')
 options=('!strip')
-makedepends=(bc kmod libelf git)
+makedepends=(bc kmod libelf git cpio)
 if [ -n "$_htmldocs_enable" ]; then
     makedepends+=(xmlto python-sphinx python-sphinx_rtd_theme graphviz imagemagick)
 fi
