--- a/linux-lqx-rebranded/linux-lqx-dev-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-dev-git/PKGBUILD
@@ -57,7 +57,7 @@ _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-dev-git
 pkgver=5.8.5.1.r1703.g884b2e4
-pkgrel=6
+pkgrel=7
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="http://liquorix.net/"
@@ -163,7 +163,7 @@ prepare() {
         if [ -n "$_NUMAdisable" ]; then
             echo "Disabling NUMA from kernel config..."
             sed -i -e 's/CONFIG_NUMA=y/# CONFIG_NUMA is not set/' \
-                -i -e '/CONFIG_AMD_NUMA=y/d' \
+                -i -e '/# CONFIG_AMD_NUMA is not set/d' \
                 -i -e '/CONFIG_X86_64_ACPI_NUMA=y/d' \
                 -i -e '/# CONFIG_NUMA_EMU is not set/d' \
                 -i -e '/CONFIG_NODES_SHIFT=6/d' \
