--- a/linux-zen-rebranded/linux-zen-tag/PKGBUILD
+++ b/linux-zen-rebranded/linux-zen-tag/PKGBUILD
@@ -44,13 +44,15 @@ _use_current=
 
 pkgbase=linux-zen-tag
 # pkgname=('linux-zen-tag' 'linux-zen-tag-headers' 'linux-zen-tag-docs')
-_major=5.8
-_minor=14
+_major=5.9
+#_minor=0
 _zen=zen1
 _srcname=linux-${_major}
-pkgver=${_major}.${_minor}.${_zen}
-_pkgver=${_major}.${_minor}-${_zen}
-pkgrel=2
+#pkgver=${_major}.${_minor}.${_zen}
+#_pkgver=${_major}.${_minor}-${_zen}
+pkgver=${_major}.${_zen}
+_pkgver=${_major}-${_zen}
+pkgrel=1
 pkgdesc='Linux ZEN'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
@@ -303,12 +305,12 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha512sums=('45a53ecf351096ef6e98242cca4228b8da9b9139ecc6963695791ea6fb7a9484a4e1c19dcca7ce7cbfdfa49de0451b70973bb078f12bdae9cbaddbc3f8092556'
+sha512sums=('d3d92ce4246bad74c9a784212f160d98449b1e8793970c2c308276568d852b8effe0528686bdb87d55d691f09a826abf7938d69bdd4759ce65ddd5c05ffe4eca'
             'SKIP'
-            'e3b6b6874f44ed486a0bd0695052f76539eb848b267d05b0f384db77911f6ec277e2210b993d2b6fbc3a44978776096c6e72a9bd0167454cd1f69f5e211d1d27'
+            'c84fa6336edfd0ccaf307a01612e1c37de8aa0089e19ab5ece2d0cacd435c34149e3d8ab12c5b35bb19dcb2e231c7d1b94f71a013d3cb49313255818af00ee13'
             'SKIP'
-            '711ecce2ce54c81e8b60b9b347cb88db054bf697396ee15e9b425671f88d22a14dae17c1c451aa10bd1d7a71c145b2fa588863205ec94e1439ed9b2769ee2e4c'
-            '7d82d00fe14e08597e485e673db242aa24096f3246605f49476dda52b2bb4bf3dcf2944d688a6cf380c8c9088049630648ac244495545049112e54c5e511d7df')
+            'b1abc4b21191c841326db341aeea6eac9918a4628f38e32f616a8eeeb9919395656fc4b805110dce93aa38188172fb672831fd76e848b3711fcd6ea9115118c6'
+            '8a2e2a48c74252d1e8616038d1bc572a73c540b79e6799fb72c0713ca091cb9866a26813266ff7b1514a4a7d504158d8637252c157b553463a3c5bcef5312be2')
 
 validpgpkeys=(
               'ABAF11C65A2970B130ABE3C479BE3E4300411886' # Linus Torvalds
