--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -51,10 +51,10 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.9
-_minor=6
-_lqx=lqx2
+_minor=7
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.9.6.lqx2.r0.g16e0d9a93f8f
+pkgver=5.9.7.lqx1.r0.gf409b7fa33c1
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
