--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -51,10 +51,10 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.9
-_minor=8
-_lqx=lqx3
+_minor=9
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.9.8.lqx3.r0.gbc738639b235
+pkgver=5.9.9.lqx1.r0.gbb7a759d64b5
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
