--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -51,10 +51,10 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.9
-_minor=11
-_lqx=lqx3
+_minor=12
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.9.11.lqx3.r0.ga1846cb4fa45
+pkgver=5.9.12.lqx1.r0.g57605ac21d3d
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
