--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -52,9 +52,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.9
 _minor=13
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.9.13.lqx1.r0.gb05736976441
+pkgver=5.9.13.lqx2.r0.g267509180ec7
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
@@ -75,7 +75,7 @@ source=("git://github.com/${_srcname}/${_srcname}#tag=v${_major}.${_minor}-${_lq
         'config')
 sha512sums=('SKIP'
             'b1abc4b21191c841326db341aeea6eac9918a4628f38e32f616a8eeeb9919395656fc4b805110dce93aa38188172fb672831fd76e848b3711fcd6ea9115118c6'
-            'ee3e00f06d57d0aedf75d518e0137991ceb667776bb02804c8e573e37e90e3f692fcd88b45a68d685d3580886bb517ada4ec3b5f46cd970066083207d998fc66')
+            '9b7b9bd11e0395151ee7f5d9ea56c70810b55cf12860a239d17b455f2a95be8ec700f544ffb319ed6282a6a095f99ad1945104bbe416194ea38d2ee7ddeab53e')
 
 
 
