--- a/juliagoda-kernels/stable/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable/linux-juliagoda-git/PKGBUILD
@@ -67,6 +67,9 @@ _cc_harder=y
 ### Running with a 1000 HZ tick rate
 _1k_HZ_ticks=y
 
+### Enable MODULE_COMPRESS_ZSTD
+_zstd_modules=
+
 ### Download ll-reverts patchset
 # ATTENTION - one of two predefined values should be selected!
 # 'stable' - stable releases (recommended)
@@ -286,6 +289,13 @@ prepare() {
 	if [ -n "$_NUMAdisable" ]; then
 		echo "Disabling NUMA from kernel config..."
 		scripts/config --disable CONFIG_NUMA
+	fi
+
+    ### Enable MODULE_COMPRESS_ZSTD
+	if [ -n "$_zstd_modules" ]; then
+		echo "Enabling ZSTD module compression..."
+		scripts/config --disable CONFIG_MODULE_COMPRESS_XZ
+		scripts/config --enable CONFIG_MODULE_COMPRESS_ZSTD
 	fi
 
     ### Optionally load needed modules for the make localmodconfig
