--- a/linux-rolling-stable/api-headers/linux-api-headers-git/PKGBUILD
+++ b/linux-rolling-stable/api-headers/linux-api-headers-git/PKGBUILD
@@ -4,9 +4,9 @@
 # toolchain build order: linux-api-headers->glibc->binutils->gcc->binutils->glibc
 
 pkgname=linux-api-headers-git
-_major=5.9
+_major=5.10
 _srcname=linux
-pkgver=5.9.6.r7131.g6638a94364ed
+pkgver=5.10.2.r9481.geb043323d674
 pkgrel=1
 pkgdesc="Kernel headers sanitized for use in userspace"
 arch=('any')
